--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "devDependencies": {
     "textlint": "^11.8.1",
+    "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-preset-japanese": "^5.0.0",
     "textlint-rule-prh": "^5.3.0"
   }
