--- a/.textlintrc
+++ b/.textlintrc
@@ -1,6 +1,8 @@
 {
   "rules": {
+    "preset-ja-technical-writing": true,
     "preset-japanese": true,
+    "preset-jtf-style": true,
     "prh": {
       "rulePaths": [
         "node_modules/prh/prh-rules/media/WEB+DB_PRESS.yml"
