--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1",
     "textlint-rule-preset-japanese": "^5.0.0",
+    "textlint-rule-preset-jtf-style": "^2.3.6",
     "textlint-rule-prh": "^5.3.0"
   }
 }
