--- a/.textlintrc
+++ b/.textlintrc
@@ -5,7 +5,7 @@
     "preset-jtf-style": true,
     "prh": {
       "rulePaths": [
-        "node_modules/prh/prh-rules/media/WEB+DB_PRESS.yml"
+        "prh/main.yml"
       ]
     }
   },
